--- a/javascript/color1.html
+++ b/javascript/color1.html
@@ -7,7 +7,8 @@
 
                 document.querySelectorAll('.color-change').forEach(function(button) {
                     button.onclick = function () {
-                        document.querySelector('#hello').style.color = button.dataset.color;
+                        alert('hello');
+                        // document.querySelector('#hello').style.color = button.dataset.color;
                     };
                 });
             });
