--- a/react/test.html
+++ b/react/test.html
@@ -5,20 +5,56 @@
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-        <title>Addition</title>
+        <title>TODO</title>
     </head>
     <body>
         <div id="app"></div>
         <script type="text/babel">
 
-            class App extends React.component {
+            class App extends React.Component {
 
                 constructor(props) {
                     super(props);
                     this.state = {
+                        tasks: [],
+                        input: "",
+                    };
+                }
 
+                render() {
+                    return (
+                        <div>
+                            <h1>Tasks</h1>
+                            <h2>{this.state.tasks.length} left to do.</h2>
+                            <ul>
+                                {this.state.tasks.map((task, i) =>
+                                    <li key={i}>
+                                        {task}
+                                    </li>
+                                )}
+                            </ul>
+                            <div>
+                                <input onKeyPress={this.inputKeyPress} autoFocus onChange={this.handleChange} value={this.state.input} />
+                            </div>
+                        </div>
+                    )
+                }
+
+                inputKeyPress = (event) => {
+                    if (event.key === "Enter") {
+                        this.setState(state => ({
+                            tasks: [...state.tasks, state.input],
+                            input: ""
+                        }))
                     }
                 }
+
+                handleChange = (event) => {
+                    this.setState({
+                        input: event.target.value
+                    })
+                }
+
             }
 
             ReactDOM.render(<App />, document.querySelector('#app'))
