--- a/react/tasks1.html
+++ b/react/tasks1.html
@@ -29,7 +29,7 @@
                             <ul>
                                 {this.state.tasks.map((task, i) =>
                                     <li key={i}>
-                                        <button data-index={i} onClick={this.deleteTask}>Delete</button>
+                                        <button onClick={() => this.deleteTask(i)}>Delete</button>
                                         {task}
                                     </li>
                                 )}
@@ -56,14 +56,13 @@
                     })
                 }
 
-                deleteTask = (event) => {
-                    const index = event.target.dataset.index
+                deleteTask = (index) => {
 
                     this.setState(state => {
-                        const tasks = [...this.state.tasks];
+                        const tasks = [...state.tasks];
                         tasks.splice(index, 1);
-                        return{
-                            tasks
+                        return {
+                            tasks: tasks
                         }
                     })
                 }
