--- a/designskill/test.html
+++ b/designskill/test.html
@@ -1,110 +1,141 @@
-<!-- https://opentutorials.org/course/2473/13570 -->
-
-
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200i,300,300i,400,400i&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="fontello-85f06572/css/fontello.css">
         <style>
-            .container{
-
+            body {
+                background-image: url(images/bg.jpg);
+                font-family: "Source Sans Pro", sans-serif;
+                background-size: cover;
             }
-
-            *{
-                box-sizing: border-box;
-            }
-            .container{
-                border:5px solid black;
-            }
-            .container>*{
+            #wrapper {
                 border:5px solid red;
             }
-            .container>.content>*{
+            #wrapper>* {
                 border:5px solid green;
             }
-            .container .content{
-                padding-left:200px;
-                padding-right:150px;
-                overflow: hidden;
-            }
-            .container .content>*{
-                float:left;
-                padding-bottom:2500px;
-                margin-bottom:-2500px;
-            }
-            .container .content main{
-                width:100%;
-            }
-            .container .content nav{
-                width:200px;
-                margin-left: -100%;
-                left:-200px;
-                position: relative;
-            }
-            .container .content aside{
-                width:150px;
-                margin-right:-150px; 
-            }
-            .container footer{
-                clear: both;
+            #wrapper>*>* {
+                border:5px solid blue;
             }
 
-            @media (max-width:599px){
-                .container .content{
-                    padding-left:0;
-                    padding-right:0;
-                    overflow: visible;
-                }
-                .container .content>*{
-                    float:none;
-                    padding-bottom:0;
-                    margin-bottom:0;
-                }
-                .container .content main{
-                    width:100%;
-                }
-                .container .content nav{
-                    width:auto;
-                    margin-left: 0;
-                    left:0;
-                    position: relative;
-                }
-                .container .content aside{
-                    width:auto;
-                    margin-right:0; 
-                }
+
+        /* header css */
+            #header .avatar {
+                border: 1px solid rgba(255, 255, 255, 0.25);
+                border-radius: 100%;
+                display: inline-block;
+                background-color: rgba(255, 255, 255, 0.055);
+                padding: 0.3rem;
             }
+            #header .avatar img {
+                border-radius: 100%;
+                display: block;
+            }
+
+            #header h1 {
+                font-size: 1.5rem;
+                color:rgba(255, 255, 255, 0.5);
+                font-weight: 200;
+            }
+            #header h1 strong {
+                color: white;
+                font-weight: 200;
+            }
+            #header h1 a {
+                color:rgba(255, 255, 255, 0.5);
+                text-decoration: none;
+                border-bottom: 1px dotted rgba(255, 255, 255, 0.5);
+            }
+
+            #header ul.icons li {
+                display: inline-block;
+                border-radius: 100%;
+                border: 1px solid rgba(255, 255, 255, 0.25);
+                background-color: rgba(255, 255, 255, 0.055);
+                width: 2rem;
+                height: 2rem;
+                display: inline-flex;
+            }
+            #header ul.icons li a {
+                text-decoration: none;
+                color: rgba(255, 255, 255, 0.5);
+                font-size: 2rem;
+            }
+            #header ul.icons li .label {
+                display: none;
+            }
+
         </style>
-</head>
+    </head>
 
     <body>
-        <div class="container">
 
-            <header>
-                <h1>HEADER</h1>
-            </header>
+		<!-- Wrapper -->
+        <div id="wrapper">
 
-            <section class="content">
-                <main>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem facere itaque nisi ipsum voluptate alias, ea vitae nemo, voluptas facilis sunt tenetur harum quos cumque unde aut obcaecati atque modi nobis. Maxime molestias, veritatis alias sapiente quo fugiat provident. Provident totam asperiores laboriosam dignissimos, cupiditate, voluptatum dolore nam repellat architecto minus consequuntur. Officiis magni reprehenderi!
-                </main>
-                <nav>
-                    <ul>
-                        <li>item</li>
-                        <li>item</li>
-                        <li>item</li>
+            <!-- Header -->
+                <header id="header">
+                    <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+                    <h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
+                    and released for free under the Creative Commons License.</h1>
+                    <ul class="icons">
+                        <li><a href="#" class="icon-twitter-circled"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="icon-facebook-circled"><span class="label">Facebook</span></a></li>
+                        <li><a href="#" class="icon-instagram"><span class="label">Instagram</span></a></li>
+                        <li><a href="#" class="icon-mail-alt"><span class="label">Email</span></a></li>
                     </ul>
-                </nav>
-                <aside>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, possimus 
-                </aside>
-            </section>
+                </header>
 
-            <footer>
-                FOOTER
-            </footer>
+            <!-- Main -->
+                <section id="main">
+
+                    <!-- Thumbnails -->
+                        <section class="thumbnails">
+                            <div>
+                                <a href="images/fulls/01.jpg">
+                                    <img src="images/thumbs/01.jpg" alt="" />
+                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                </a>
+                                <a href="images/fulls/02.jpg">
+                                    <img src="images/thumbs/02.jpg" alt="" />
+                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                </a>
+                            </div>
+                            <div>
+                                <a href="images/fulls/03.jpg">
+                                    <img src="images/thumbs/03.jpg" alt="" />
+                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                </a>
+                                <a href="images/fulls/04.jpg">
+                                    <img src="images/thumbs/04.jpg" alt="" />
+                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                </a>
+                                <a href="images/fulls/05.jpg">
+                                    <img src="images/thumbs/05.jpg" alt="" />
+                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                </a>
+                            </div>
+                            <div>
+                                <a href="images/fulls/06.jpg">
+                                    <img src="images/thumbs/06.jpg" alt="" />
+                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                </a>
+                                <a href="images/fulls/07.jpg">
+                                    <img src="images/thumbs/07.jpg" alt="" />
+                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                </a>
+                            </div>
+                        </section>
+
+                </section>
+
+            <!-- Footer -->
+                <footer id="footer">
+                    <p>&copy; Untitled. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Demo Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+                </footer>
 
         </div>
-    </body>
 
+    </body>
 </html>
