--- a/designskill/test.html
+++ b/designskill/test.html
@@ -10,23 +10,29 @@
                 background-size: cover;
             }
             #wrapper {
-                border:5px solid red;
+                /* border:5px solid red; */
             }
             #wrapper>* {
-                border:5px solid green;
+                /* border:5px solid green; */
             }
             #wrapper>*>* {
-                border:5px solid blue;
+                /* border:5px solid blue; */
             }
 
 
         /* header css */
+            #header {
+                text-align: center;
+                padding-top: 2rem;
+                padding-bottom: 2rem;
+            }
             #header .avatar {
                 border: 1px solid rgba(255, 255, 255, 0.25);
                 border-radius: 100%;
                 display: inline-block;
                 background-color: rgba(255, 255, 255, 0.055);
                 padding: 0.3rem;
+                margin-bottom: 1.2rem;
             }
             #header .avatar img {
                 border-radius: 100%;
@@ -37,6 +43,8 @@
                 font-size: 1.5rem;
                 color:rgba(255, 255, 255, 0.5);
                 font-weight: 200;
+                line-height: 3rem;
+                margin-bottom: 2rem;
             }
             #header h1 strong {
                 color: white;
@@ -56,14 +64,74 @@
                 width: 2rem;
                 height: 2rem;
                 display: inline-flex;
+                justify-content: center;
+                align-items: center;
+                margin-right: 2rem;
             }
             #header ul.icons li a {
                 text-decoration: none;
                 color: rgba(255, 255, 255, 0.5);
-                font-size: 2rem;
             }
             #header ul.icons li .label {
                 display: none;
+            }
+            #header ul.icons li:hover {
+                background-color: rgba(255,255,255,0.2);
+            }
+            #header ul.icons li a:before{
+                font-size: 1.4rem;
+            }
+
+        /* main css */
+            #main .thumbnails {
+                display: flex;
+            }
+            #main .thumbnails > div {
+                flex-grow: 1;
+                margin-right: 1rem;
+                margin-left: 1rem;
+            }
+            #main .thumbnails img {
+                width: 100%;
+                border-top-left-radius: 0.3rem;
+                border-top-right-radius: 0.3rem;
+                display:block;
+            }
+            #main .thumbnails a {
+                text-decoration: none;
+            }
+            #main .thumbnails a h3{
+                color: rgba(255, 255, 255, 0.801);
+                border: .5px solid rgba(255,255,255,0.3);
+                border-top: none;
+                text-align: center;
+                padding-top: 0.5rem;
+                padding-bottom: 0.8rem;
+                margin-top: 0;
+                border-bottom-left-radius: 0.3rem;
+                border-bottom-right-radius: 0.3rem;
+                background-color: rgba(255,255,255,0.1);
+                font-weight: 200;
+                font-size: 1rem;
+                line-height: 1.32rem;
+                margin-bottom: 1rem;
+            }
+            #main .thumbnails a h3:hover {
+                font-size: 1.12rem;
+                background-color: rgba(255,255,255,0.25);
+            }
+
+        /* footer */
+            #footer {
+                text-align: center;
+            }
+            #footer:before {
+                content: '';
+                display: block;
+                width: 25rem;
+                margin: 5rem auto 3rem auto;
+                border-top: 0.8px solid rgba(255, 255, 255, 0.5);
+                border-spacing: 10px;
             }
 
         </style>
