--- a/htmlandcss/morzilla.html
+++ b/htmlandcss/morzilla.html
@@ -5,7 +5,8 @@
     <head>
         <title>JavaScript 참고자료</title>
 
-        <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:400,700&display=swap" rel="stylesheet">
+        
 
         <style>
             html body {
@@ -71,14 +72,17 @@
             }
             .title {
                 font-family: 'Nanum Myeongjo', serif;
+                font-weight: 600;
                 font-size: 3rem;
                 line-height: 50%;              
             }
 
             .max-content-width-container {
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 0.9rem;
                 height: 40px;
                 padding: 0px 24px;
-                border-bottom: 1px solid #ddd;
+                border-bottom: 1px solid #eee;
                 align-items: center;
                 position: relative;
             }
@@ -104,10 +108,19 @@
                 font-size: 0.5rem;
                 margin: 0 0 0 5px;
             }
+
+            .sidebar, .document-toc-container {
+                max-width: 350px;
+            }
+            #content {
+                max-width: 1050px;
+            }
+            
         </style>
 
     </head>
     <body>
+
         <header class="page-header">
             <a href="#" class="logo">logo</a>
             <nav class="main-nav">
@@ -120,15 +133,23 @@
             <form id="header-search"></form>
             <a href="#" class="signin-link">로그인</a>
         </header>
+
         <div class="titlebar-container">
             <h1 class="title">JavaScript 참고자료</h1>
         </div>
+
         <div class="max-content-width-container">
             <ol>
                 <li><span class="breadcrumb"><a href="#">개발자를 위한 웹 기술</a></span></li>
                 <li><span class="breadcrumb"><a href="#">JavaScript</a></span></li>
                 <li><span class="crumb-current"><a href="#">JavaScript 참고자료</a></span></li>
             </ol>
+        </div>
+
+        <div class="content-layout">
+            <aside class="document-toc-container"></aside>
+            <div id="content" class="article text-content"></div>
+            <div class="sidebar"></div>
         </div>
     </body>
 </html>
