--- a/htmlandcss/dropdown.html
+++ b/htmlandcss/dropdown.html
@@ -7,9 +7,16 @@
                 font: 1rem "Times New Roman";
             }
             #nav-bar {
-                margin: 0;
-                border: 4px solid red;
+                margin: 20px 0;
                 position: relative;
+            }
+            #nav-bar::after {
+                content: '';
+                position: absolute;
+                margin: 0 40px;
+                width: 80%;
+                box-shadow: 0 1px 1px -1px black;
+                height: 10px;
             }
             #menus {
                 margin: 10px 0;
@@ -20,15 +27,27 @@
                 margin: 0 20px;
             }
 
+            .parent-dropdown:hover {
+                cursor: pointer;
+            }
+
+            .parent-dropdown:visited + #dropdown {
+                transition: all .5s ease;
+                display: flex;
+            }
+
             #dropdown{
                 list-style: none;
                 position: absolute;
-                display: flex;
+                display: none;
                 flex-direction: column;
-                top: 30px;
+                top: 10px;
                 left: 360px;
-                border: 1px solid black;
+                margin: 20px 0;
+                border: 1px solid rgba(0, 0, 0, 0.5);
+                border-radius: 10px;
                 padding: 15px 20px;
+                transition: .5s;
             }
             #dropdown > * {
                 padding: 1rem 0;
@@ -44,7 +63,7 @@
                 <li>menu one</li>
                 <li>menu two</li>
                 <li>menu three</li>
-                <li>dropdown</li>
+                <li class="parent-dropdown">dropdown</li>
                 <ul id="dropdown">
                     <li>dropdown menu 1</li>
                     <li>dropdown menu 2</li>
