--- a/TOFO/html/home.html
+++ b/TOFO/html/home.html
@@ -4,6 +4,7 @@
 <title>omitting element</title>
 <!-- css -->
 <link rel="stylesheet" href="../css/home.css">
+<link rel="stylesheet" href="../css/normalize.css">
 <header></header>
 <main class="grid-container">
     <section id="todo" class="items">
@@ -13,6 +14,10 @@
             <li>
                 <input type="checkbox" id="pushup"><label for="pushup">
                     푸쉬업 10개
+                </label>
+            <li>
+                <input type="checkbox" id="squart"><label for="squart">
+                    스쿼트 50개
                 </label>
         </ul>
     </section>
