--- a/TOFO/html/home.html
+++ b/TOFO/html/home.html
@@ -5,11 +5,12 @@
 <!-- css -->
 <link rel="stylesheet" href="../css/home.css">
 <link rel="stylesheet" href="../css/normalize.css">
+<script src="../js/home.js"></script>
 <header></header>
 <main class="grid-container">
     <section id="todo" class="items">
-        <h1>오늘 나는..</h1>
-        <h2>운동하기</h2>
+        <h1 class="cursor-default">오늘 나는..</h1>
+        <h2 class="cursor-default">운동하기</h2>
         <ul>
             <li>
                 <input type="checkbox" id="pushup"><label for="pushup">
@@ -18,6 +19,17 @@
             <li>
                 <input type="checkbox" id="squart"><label for="squart">
                     스쿼트 50개
+                </label>
+        </ul>
+        <h2 class="cursor-default">코딩하기</h2>
+        <ul>
+            <li>
+                <input type="checkbox" id="html"><label for="html">
+                    html 30분
+                </label>
+            <li>
+                <input type="checkbox" id="javascript"><label for="javascript">
+                    javascript 60분
                 </label>
         </ul>
     </section>
