update home > todo > li ui

--- a/TOFO/html/home.html
+++ b/TOFO/html/home.html
@@ -1,20 +1,23 @@
 <!doctype html>
-<meta charset="utf-8">
-<!-- title -->
 <title>omitting element</title>
+<!-- meta -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- css -->
 <link rel="stylesheet" href="../css/home.css">
 <link rel="stylesheet" href="../css/normalize.css">
+<!-- javascript -->
 <script src="../js/home.js"></script>
+
 <header></header>
 <main class="grid-container">
     <section id="todo" class="items">
-        <h1 class="cursor-default">오늘 나는..</h1>
+        <h1 class="cursor-default">오늘 나는..</h1><div id="add-schedule"></div>
         <h2 class="cursor-default">운동하기</h2>
         <ul>
-            <li>
+            <!-- fix to this -->
                 <input type="checkbox" id="pushup"><label for="pushup">
-                    푸쉬업 10개
+                    <li>푸쉬업 10개</li>
                 </label>
             <li>
                 <input type="checkbox" id="squart"><label for="squart">
@@ -33,6 +36,8 @@
                 </label>
         </ul>
     </section>
-    <section id="calendar" class="items"></section>
+    <section id="calendar" class="items">
+        asd
+    </section>
 </main>
 <footer></footer>
