finished todo list styling

--- a/TOFO/html/home.html
+++ b/TOFO/html/home.html
@@ -15,29 +15,30 @@
         <h1 class="cursor-default">오늘 나는..</h1><div id="add-schedule"></div>
         <h2 class="cursor-default">운동하기</h2>
         <ul>
-            <!-- fix to this -->
-                <input type="checkbox" id="pushup"><label for="pushup">
-                    <li>푸쉬업 10개</li>
+            <li>
+                <label><input type="checkbox">
+                    <span>푸쉬업 10개</span>
                 </label>
             <li>
-                <input type="checkbox" id="squart"><label for="squart">
-                    스쿼트 50개
+                <label><input type="checkbox">
+                    <span>스쿼트 50개</span>
                 </label>
         </ul>
         <h2 class="cursor-default">코딩하기</h2>
         <ul>
             <li>
-                <input type="checkbox" id="html"><label for="html">
-                    html 30분
+                <label><input type="checkbox">
+                    <span>html 30분</span>
                 </label>
             <li>
-                <input type="checkbox" id="javascript"><label for="javascript">
-                    javascript 60분
+                <label><input type="checkbox">
+                    <span>javascript 60분</span>
                 </label>
         </ul>
     </section>
     <section id="calendar" class="items">
-        asd
+        <div><span>asds
+        </span></div>
     </section>
 </main>
 <footer></footer>
