--- a/TOFO/html/home.html
+++ b/TOFO/html/home.html
@@ -36,9 +36,12 @@
                 </label>
         </ul>
     </section>
-    <section id="calendar" class="items">
-        <div><span>asds
-        </span></div>
+    <section id="calendar-container" class="items">
+        <table id="calendar">
+            <caption>January</caption>
+            <colgroup><col id="sun-col"><col id="mon-col"><col id="tue-col"><col id="wed-col"><col id="thu-col"><col id="fri-col"><col id="sat-col"></colgroup>
+            
+        </table>
     </section>
 </main>
 <footer></footer>
